k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookstore
  labels:
    app: bookstore
    author: suresh-gaikwad
  annotations:
    description: "Namespace for Bookstore Application by Suresh Gaikwad"
