k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-service
  namespace: bookstore
  labels:
    app: bookstore
    author: suresh-gaikwad
  annotations:
    description: "Bookstore Application Service by Suresh Gaikwad"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: bookstore

---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-nodeport
  namespace: bookstore
  labels:
    app: bookstore
    author: suresh-gaikwad
  annotations:
    description: "Bookstore Application NodePort Service by Suresh Gaikwad"
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: bookstore
